[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Wrapper around a 2d hash map made for collision broadphase"
edition = "2021"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_sparse_grid_2d"
repository = "https://github.com/johanhelsing/bevy_sparse_grid_2d"
version = "0.8.0"

[dependencies]
bevy = { version = "0.17", default-features = false }
smallvec = { version = "1.13", features = ["const_generics"] } # same as bevy 0.17
